feat: add GetUserList api, add ctx into repo while operating db, and update swagger
