# go_backend/api/rest/handler/user/user.go
@@ -17,6 +17,7 @@ type IUserHandler interface {
 	Login() gin.HandlerFunc
 	Register() gin.HandlerFunc
 	GetUserByID() gin.HandlerFunc
+	GetUserList() gin.HandlerFunc
 }
 
 type UserHandler struct {
@@ -30,24 +31,20 @@ func NewUserHandler(userService userSrv.IUserService) IUserHandler {
 }
 
 // @Tags User
-// @Router /user/login [post]
+// @Router /api/v1/user/login [post]
 // @Summary User login
 // @Description User login
 // @Accept json
 // @Produce json
-// @Param username body string true "username"
+// @Param loginReq body loginReq true "login request"
 // @Success 200 {object} LoginResp "success"
-// @Failure 400 {object} string "bad request"
-// @Failure 500 {object} string "internal server error"
+// @Failure 400 {object} hdl.ErrorResponse "bad request"
+// @Failure 500 {object} hdl.ErrorResponse "internal server error"
 func (h *UserHandler) Login() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var req struct {
-			Email    string `json:"email" binding:"required,email,max=50"`
-			Password string `json:"password" binding:"required,min=8,max=20,alphanum"`
-		}
-
+		var req *loginReq
 		if err := c.ShouldBindJSON(&req); err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 				Code: hdl.ErrRequestInvalid,
 				Msg:  util.ParseValidateError(err).Error(),
 			})
@@ -57,13 +54,13 @@ func (h *UserHandler) Login() gin.HandlerFunc {
 		loginResp, err := h.UserService.Login(c.Request.Context(), req.Email, req.Password)
 		if err != nil {
 			if errors.Is(err, userRepo.ErrUserNotFound) {
-				c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+				c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 					Code: hdl.ErrNotFound,
 					Msg:  userRepo.ErrUserNotFound.Error(),
 				})
 				return
 			}
-			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.ErrorResponse{
 				Code: hdl.ErrInternalServer,
 				Msg:  hdl.ErrInternalServerMsg,
 			})
@@ -71,35 +68,32 @@ func (h *UserHandler) Login() gin.HandlerFunc {
 		}
 
 		c.AbortWithStatusJSON(http.StatusOK, &hdl.Response{
-			Data: gin.H{
-				"username": loginResp.Username,
-				"token":    loginResp.Token,
-			},
+			Data: loginResp,
 		})
 	}
 }
 
+type loginReq struct {
+	Email    string `form:"email" binding:"required,email,max=50"`
+	Password string `form:"password" binding:"required,min=8,max=20,alphanum"`
+}
+
 // @Tags User
-// @Router /user/register [post]
+// @Router /api/v1/user/register [post]
 // @Summary User register
 // @Description User register
 // @Accept json
 // @Produce json
-// @Param username body string true "username"
-// @Param email body string true "email"
-// @Param password body string true "password"
-// @Success 200 {object} string "success"
-// @Failure 400 {object} string "bad request"
-// @Failure 500 {object} string "internal server error"
+// @Param registerReq body registerReq true "register request"
+// @Success 204
+// @Failure 400 {object} hdl.ErrorResponse "bad request"
+// @Failure 403 {object} hdl.ErrorResponse "forbidden"
+// @Failure 500 {object} hdl.ErrorResponse "internal server error"
 func (h *UserHandler) Register() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var req struct {
-			Email    string `json:"email" binding:"required,email,max=50"`
-			Password string `json:"password" binding:"required,min=8,max=20,alphanum"`
-		}
-
+		var req *registerReq
 		if err := c.ShouldBindJSON(&req); err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 				Code: hdl.ErrRequestInvalid,
 				Msg:  util.ParseValidateError(err).Error(),
 			})
@@ -109,40 +103,43 @@ func (h *UserHandler) Register() gin.HandlerFunc {
 		err := h.UserService.Register(c.Request.Context(), req.Email, req.Password)
 		if err != nil {
 			if errors.Is(err, userRepo.ErrUserExisted) {
-				c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+				c.AbortWithStatusJSON(http.StatusForbidden, &hdl.ErrorResponse{
 					Code: hdl.ErrForbidden,
 					Msg:  userRepo.ErrUserExisted.Error(),
 				})
 				return
 			}
-			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.ErrorResponse{
 				Code: hdl.ErrInternalServer,
 				Msg:  hdl.ErrInternalServerMsg,
 			})
 			return
 		}
 
-		c.AbortWithStatusJSON(http.StatusOK, &hdl.Response{
-			Data: "success",
-		})
+		c.AbortWithStatus(http.StatusNoContent)
 	}
 }
 
+type registerReq struct {
+	Email    string `form:"email" binding:"required,email,max=50"`
+	Password string `form:"password" binding:"required,min=8,max=20,alphanum"`
+}
+
 // @Tags User
-// @Router /user/{id} [get]
+// @Router /api/v1/user/{id} [get]
 // @Summary Get user by id
 // @Description Get user by id
 // @Accept json
 // @Produce json
 // @Param id path int true "id"
 // @Success 200 {object} UserResp "success"
-// @Failure 400 {object} string "bad request"
-// @Failure 500 {object} string "internal server error"
+// @Failure 400 {object} hdl.ErrorResponse "bad request"
+// @Failure 500 {object} hdl.ErrorResponse "internal server error"
 func (h *UserHandler) GetUserByID() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		id := c.Param("id")
 		if id == "" {
-			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 				Code: hdl.ErrRequestInvalid,
 				Msg:  "id is required",
 			})
@@ -151,7 +148,7 @@ func (h *UserHandler) GetUserByID() gin.HandlerFunc {
 
 		userID, err := strconv.ParseUint(id, 10, 0)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 				Code: hdl.ErrRequestInvalid,
 				Msg:  "id must be an integer",
 			})
@@ -161,13 +158,13 @@ func (h *UserHandler) GetUserByID() gin.HandlerFunc {
 		user, err := h.UserService.GetUserByID(c.Request.Context(), uint(userID))
 		if err != nil {
 			if errors.Is(err, userRepo.ErrUserNotFound) {
-				c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.Response{
+				c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
 					Code: hdl.ErrNotFound,
 					Msg:  userRepo.ErrUserNotFound.Error(),
 				})
 				return
 			}
-			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.Response{
+			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.ErrorResponse{
 				Code: hdl.ErrInternalServer,
 				Msg:  hdl.ErrInternalServerMsg,
 			})
@@ -178,4 +175,45 @@ func (h *UserHandler) GetUserByID() gin.HandlerFunc {
 			Data: user,
 		})
 	}
+}
+
+// @Tags User
+// @Router /api/v1/user/userList [post]
+// @Summary Get user list
+// @Description Get user list
+// @Accept json
+// @Produce json
+// @Param getUserListReq body getUserListReq true "get user list request"
+// @Success 200 {object} UserListResp "success"
+// @Failure 400 {object} hdl.ErrorResponse "bad request"
+// @Failure 500 {object} hdl.ErrorResponse "internal server error"
+func (h *UserHandler) GetUserList() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var req *getUserListReq
+		if err := c.ShouldBindJSON(&req); err != nil {
+			c.AbortWithStatusJSON(http.StatusBadRequest, &hdl.ErrorResponse{
+				Code: hdl.ErrRequestInvalid,
+				Msg:  util.ParseValidateError(err).Error(),
+			})
+			return
+		}
+
+		userListResp, err := h.UserService.GetUserList(c.Request.Context(), req.Page, req.Limit)
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, &hdl.ErrorResponse{
+				Code: hdl.ErrInternalServer,
+				Msg:  hdl.ErrInternalServerMsg,
+			})
+			return
+		}
+
+		c.AbortWithStatusJSON(http.StatusOK, &hdl.Response{
+			Data: userListResp,
+		})
+	}
+}
+
+type getUserListReq struct {
+	Page  int `form:"page" binding:"required,min=1"`
+	Limit int `form:"limit" binding:"required,min=1"`
 }
